# dabase-tool

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_REPORT.md  README.md
backend/: .env.example  Cargo.toml  run_with_dm8_driver.sh
backend/src/: lib.rs  main.rs
backend/src/api/: config.rs  connection.rs  export.rs  mod.rs  schema.rs
backend/src/config_store/: mod.rs
backend/src/db/: connection.rs  dm8_adapter.rs  mod.rs  schema.rs
backend/src/export/: data.rs  ddl.rs  mod.rs
backend/src/models/: mod.rs
docs/: packaging-notes.md
docs/fixes/: 2026-01-30-ddl-export-fixes.md
docs/plans/: 2026-01-27-sqlite-config-store.md  2026-01-28-ddl-data-export-fixes.md  2026-01-28-tauri-dm8-bundling.md  2026-01-30-ddl-compat-design.md  2026-01-30-ddl-compat.md  2026-01-30-export-schema-design.md  2026-01-30-export-schema-implementation.md
docs/testing/: tauri-qa.md
drivers/dm8/windows/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/scripts/: test-export-progress.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionForm.tsx  ExportConfig.tsx  SchemaExplorer.tsx  TableSelector.tsx  TechBackground.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ExportWizard.tsx
frontend/src/router/: index.tsx
frontend/src/services/: api.ts
frontend/src/store/: useExportStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: exportProgress.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: driver.rs  main.rs
src-tauri/tests/: driver_discovery.rs
(+3 files in other folders)
